# fedora_messaging

./: .drone.star  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGES.rst  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements-ci.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml  flake8.yml  lint.yml  setup.yml  test.yml  workflow.yml
weblate_fedora_messaging/: __init__.py  app.py  apps.py  models.py  tasks.py  tests.py
