[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=78.0.2"
]

[project]
authors = [
  {email = "michal@weblate.org", name = "Michal Čihař"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Internationalization",
  "Topic :: Software Development :: Localization"
]
dependencies = [
  "cryptography>=42.0.2",
  "django-appconf>=1.0.0,<1.2",
  "Django>=5.0,<5.3",
  "fedora-messaging==3.7.1",
  "twisted>=23.8.0",
  "Weblate>=5.11"
]
description = "Weblate Fedora Messaging integration"
keywords = [
  "gettext",
  "git",
  "i18n",
  "l10n",
  "mercurial",
  "translate"
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
name = "weblate_fedora_messaging"
requires-python = ">=3.11"
version = "0.11"

[project.optional-dependencies]
lint = [
  "pre-commit==4.2.0"
]
test = [
  "build==1.2.2.post1",
  "coverage==7.8.2",
  "twine==6.1.0"
]

[project.readme]
content-type = "text/x-rst"
file = "README.rst"

[project.urls]
Documentation = "https://docs.weblate.org/"
Download = "https://github.com/WeblateOrg/fedora_mesaging"
Funding = "https://weblate.org/donate/"
Homepage = "https://weblate.org/"
"Issue Tracker" = "https://github.com/WeblateOrg/fedora_messaging/issues"
"Source Code" = "https://github.com/WeblateOrg/fedora_messaging"
Twitter = "https://twitter.com/WeblateOrg"

[tool.check-manifest]
ignore = [
  "*.toml",
  "*.yaml",
  "*.yml",
  ".editorconfig"
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
ignore = [
  "D10",  # TODO: we are missing many docstrings
  "D203",  # CONFIG: incompatible with D211
  "D212"  # CONFIG: incompatible with D213
]
select = [
  "A",
  "B",
  "C4",
  "C90",
  "D",
  "DJ",
  "E",
  "ERA",
  "EXE",
  "F",
  "G",
  "ICN",
  "INP",
  "ISC",
  "N",
  "PD",
  "PGH",
  "PIE",
  "PL",
  "PYI",
  "Q",
  "RET",
  "RSE",
  "RUF",
  "SIM",
  "SLF",
  "T10",
  "T20",
  "TID",
  "TRY",
  "UP",
  "YTT"
]

[tool.ruff.lint.mccabe]
max-complexity = 16

[tool.setuptools]
include-package-data = true
packages = [
  "weblate_fedora_messaging"
]
platforms = [
  "any"
]

[tool.tomlsort]
ignore_case = true
sort_inline_arrays = true
sort_inline_tables = true
sort_table_keys = true
spaces_before_inline_comment = 2
